C2 failed "assert(C->live_nodes() - live_at_begin <= 2 * _nodes_required) failed: Bad node estimate: actual = 208 >> request = 101"

XMLWordPrintable

    • b30
    • x86_64
    • os_x

        The following test failed in the JDK14 CI:

        applications/runthese/RunThese30M.java

        Here's a snippet from the log file:

        [stress.process.out] # Internal Error (/scratch/mesos/slaves/601ba65f-769d-4a91-8a1e-d3fc5817582d-S9003/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/163eb5b8-588f-43d3-9743-db90deb7280c/runs/22ddcfb3-7c7a-4cf3-8477-eaea19214861/workspace/open/src/hotspot/share/opto/loopnode.hpp:1413), pid=53128, tid=130383
        [stress.process.out] # assert(C->live_nodes() - live_at_begin <= 2 * _nodes_required) failed: Bad node estimate: actual = 208 >> request = 101
        [stress.process.out] #
        [stress.process.out] # JRE version: Java(TM) SE Runtime Environment (14.0+24) (fastdebug build 14-ea+24-1104)
        [stress.process.out] # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+24-1104, compiled mode, sharing, tiered, compressed oops, g1 gc, bsd-amd64)
        [stress.process.out] # Core dump will be written. Default location: /cores/core.53128

        Here's the crashing thread's stack:

        --------------- T H R E A D ---------------

        Current thread (0x00007fd26db71000): JavaThread "C2 CompilerThread5" daemon [_thread_in_native, id=130383, stack(0x00007000131f3000,0x00007000132f3000)]


        Current CompileTask:
        C2:1855322 215650 % b 4 jdk.internal.org.objectweb.asm.MethodWriter::putFrame @ 249 (549 bytes)

        Stack: [0x00007000131f3000,0x00007000132f3000], sp=0x00007000132ee160, free space=1004k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.dylib+0xbae71b] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6e5
        V [libjvm.dylib+0xbaee37] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x47
        V [libjvm.dylib+0x3aa5a4] report_vm_error(char const*, int, char const*, char const*, ...)+0x145
        V [libjvm.dylib+0x85e00d] PhaseIdealLoop::require_nodes_final(unsigned int, bool)+0xcd
        V [libjvm.dylib+0x85df0f] AutoNodeBudget::~AutoNodeBudget()+0x11f
        V [libjvm.dylib+0x857ed5] AutoNodeBudget::~AutoNodeBudget()+0x15
        V [libjvm.dylib+0x857e7a] IdealLoopTree::iteration_split_impl(PhaseIdealLoop*, Node_List&)+0x51a
        V [libjvm.dylib+0x857fbb] IdealLoopTree::iteration_split(PhaseIdealLoop*, Node_List&)+0xdb
        V [libjvm.dylib+0x86af76] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0xb7c
        V [libjvm.dylib+0x379065] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x39
        V [libjvm.dylib+0x374e94] Compile::Optimize()+0x9c4
        V [libjvm.dylib+0x3732b9] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xab3
        V [libjvm.dylib+0x2c53e6] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xe8
        V [libjvm.dylib+0x385d76] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x664
        V [libjvm.dylib+0x385507] CompileBroker::compiler_thread_loop()+0x283
        V [libjvm.dylib+0xb26109] JavaThread::thread_main_inner()+0x1a1
        V [libjvm.dylib+0xb25cbd] JavaThread::run()+0x29f
        V [libjvm.dylib+0xb2272f] Thread::call_run()+0x11b
        V [libjvm.dylib+0x99b92b] thread_native_entry(Thread*)+0x131
        C [libsystem_pthread.dylib+0x3661] _pthread_body+0x154
        C [libsystem_pthread.dylib+0x350d] _pthread_body+0x0
        C [libsystem_pthread.dylib+0x2bf9] thread_start+0xd

              Assignee:
              Patric Hedlin (Inactive)
              Reporter:
              Daniel Daugherty
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: